logs/hat.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Hat-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/hat'...
Listing './lib/python3.5/site-packages/hat/backend'...
Compiling './lib/python3.5/site-packages/hat/callbacks.py'...
***   File "./lib/python3.5/site-packages/hat/callbacks.py", line 166
    print "Callback",
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hat/layers'...
Compiling './lib/python3.5/site-packages/hat/models.py'...
***   File "./lib/python3.5/site-packages/hat/models.py", line 169
    print f.format("total memory usage:", str(n_byte_total/1e6)+"Mb")
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hat/supports.py'...
***   File "./lib/python3.5/site-packages/hat/supports.py", line 86
    print f.format(string, str(time_diff)+"s")
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hat/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
